# sdr-grader

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml  version-sync.yml
docs/: ADAPTER_GUIDE.md  CALIBRATION_CORPUS.md  CHECK_FUNCTION_GUIDE.md  CI_INTEGRATION.md  CUSTOMIZATION.md  LEADERBOARDS.md  PLATFORM_COVERAGE.md  PROJECT_CONFIG.md  RUBRIC_AUDIT.md  RUBRIC_FORMAT.md  SUPPLEMENTARY_INPUTS.md  TREND_REPORTS.md  calibration_manifest.example.yaml  threshold_calibration.md
examples/: grade-aa-clean.html  grade-aa-messy.html  grade-cja-clean.html  grade-cja-messy.html  grade-clean.html  grade-messy.html  sample-report.html  templated-report.html  trend-example.html
scripts/: aggregate_distributions.py  build_aa_fixtures.py  build_cja_fixtures.py  calibrate_thresholds.py  capture_readme_asset.sh  check_version_sync.py  file_remaining_design_issues.sh  generate_examples.py  generate_grade_examples.py  generate_trend_example.py  sanitize_sdr.py
skills/sdr-grader/: README.md  SKILL.md
skills/sdr-grader/scripts/: query_grade.py
src/sdr_grader/: __init__.py  __main__.py
src/sdr_grader/adapters/: aa.py  base.py  cja.py
src/sdr_grader/cli/: exit_codes.py  main.py
src/sdr_grader/core/: exceptions.py  grade_calc.py  grader.py  models.py  timeparse.py
src/sdr_grader/data/: distribution.json
src/sdr_grader/input/: detect.py  loader.py  shell_out.py
src/sdr_grader/render/: __init__.py  dates.py  distribution.py  json_output.py  renderer.py  svg.py  truncation.py
src/sdr_grader/render/static/: report.css
src/sdr_grader/render/templates/: report.html.j2
src/sdr_grader/rules/: engine.py  registry.py  rubric.py  suppression.py
src/sdr_grader/rules/checks/: _helpers.py  attribution.py  calc_metrics.py  governance.py  naming.py  platform_specific.py  schema_hygiene.py  segments.py  supplementary.py
src/sdr_grader/rules/packs/pragmatic/: _meta.yaml  aa_evars.yaml  attribution.yaml  calc_metrics.yaml  cja_stitching.yaml  governance.yaml  launch.yaml  naming.yaml  schema_hygiene.yaml  segments.yaml
src/sdr_grader/rules/packs/strict/: _meta.yaml  aa_evars.yaml  attribution.yaml  calc_metrics.yaml  governance.yaml  (+5 more)
src/sdr_grader/trend/: __init__.py  models.py  renderer.py  runner.py
src/sdr_grader/trend/templates/: trend.html.j2
tests/: _rule_test_helpers.py  conftest.py  test_adapter_fuzz.py  test_adapters_aa.py  test_adapters_cja.py  test_calibration_attr_measurements.py  test_cli.py  test_cross_platform_parity.py  test_cycle_groups.py  test_dates.py  test_detect_and_registry.py  test_distribution.py  test_grade_calc.py  test_grader.py  test_input_modes.py  test_render_cap.py  test_renderer.py  test_rubric_validation.py  test_rule_helpers.py  test_rules_attribution.py  test_rules_calc_metrics.py  test_rules_governance.py  test_rules_naming.py  test_rules_schema_hygiene.py  test_rules_schema_hygiene_extras.py  test_rules_segments.py  test_rules_stubs_now_active.py  test_rules_supplementary.py  test_skill_helper.py  test_smoke.py  test_suppression.py  test_svg_charts.py  test_timeparse.py  test_trend.py
tests/fixtures/: aa_snapshot_clean.json  aa_snapshot_messy.json  cja_snapshot_clean.json  cja_snapshot_messy.json  demo_report.py
