[project]
name = "sdr-grader"
version = "0.0.0"
description = "Deterministic, rule-based linter for Adobe Customer Journey Analytics and Adobe Analytics implementations."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Brian Au" }]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.6",
]

[project.scripts]
sdr-grader = "sdr_grader.cli.main:main"

[project.urls]
Homepage = "https://github.com/brian-a-au/sdr-grader"
Issues = "https://github.com/brian-a-au/sdr-grader/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdr_grader"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    # Local reference artifacts kept in the working directory but not part of the repo.
    # They are gitignored; ruff would otherwise lint them on local runs.
    "render.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]
